dinosaurs and sweaters have been aligned on the page and are the correct size.

--- a/DinoEmporium/ClientApp/src/components/SweaterItem/SweaterItem.scss
+++ b/DinoEmporium/ClientApp/src/components/SweaterItem/SweaterItem.scss
@@ -2,3 +2,11 @@
   height: 300px;
   width: 300px;
 }
+
+.app {
+  display: inline-flex;
+  flex-flow: wrap;
+  align-content: space-around;
+  margin: 1%;
+  padding: 1%;
+}
